# investor-bot

./: .coverage  .dockerignore  .env.canary  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LIVE_RUNBOOK.md  Makefile  README.md  TODO.md  backtester.py  canary.env.example  cli.py  config.py  conftest.py  dashboard.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  run_diagnostics.py  run_scheduler.py  start
.claude/: save_todos.py  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: ai_analyst.py  context_card.py  macro_gate_shadow.py  performance.py  shadow_catalyst_shorts.py  shadow_popper_shorts.py  weekly_review.py
backtest/: __init__.py  engine.py  historical_fundamentals.py  intraday_engine.py  replay.py
core/: deps.py
data/: analyst_revisions.py  as_of.py  av_sentiment.py  borrow_cost.py  breadth.py  earnings_surprise.py  edgar_client.py  edgar_event_history.py  fear_greed.py  filing_similarity.py  finbert.py  fred_client.py  fundamental_cache.py  fundamentals.py  google_trends.py  index_membership.py  insider_feed.py  intraday_fetcher.py  lockup_calendar.py  macro_data.py  market_data.py  market_regime.py  news_fetcher.py  options_data.py  options_scanner.py  pairs.py  proxy_comp.py  sector_correlation.py  sector_data.py  sector_momentum.py  sentiment.py  sentiment_client.py  short_flow.py  short_interest.py  universe_builder.py  universe_history.py
docs/: EXPERIMENT.md  EXPERIMENT_LOG.md  INTEGRITY_AUDIT_2026-06-16.md  POINT_OF_NO_RETURN.md  PRE_GOLIVE_AUDIT_2026-06-17.md  audit_v1.100.md  fail_open_audit.md  incidents.md  lazy_prices_and_context.md  short_disabled_backtest_findings.md  signals.md  strategic_review.md
docs/adr/: ADR-001-claude-as-recommender-not-executor.md  ADR-002-file-state-vs-sqlite.md  ADR-003-paper-first-deployment.md  ADR-004-prompt-injection-mitigation.md  ADR-005-bounded-parameter-updates.md  ADR-006-downtrend-behaviour-and-short-side.md
evals/: test_evals.py
evals/fixtures/: bear_market_no_buy.json  conflicting_signals.json  demo_run.json  earnings_risk.json  hallucinated_tickers.json  malformed_tool_calls.json  no_buy_selectivity.json  prompt_injection_headlines.json
execution/: quote_gate.py  short_risk.py  short_universe.py  stock_scanner.py  trader.py  universe.py
experiment/: arms.py  authoring.py  backfill.py  candidate_miner.py  candidate_registry.py  case_memory.py  collection.py  context_ledger.py  counterfactual.py  dataset.py  dof_ledger.py  evidence_score.py  feed_health.py  lookahead_guard.py  material_context.py  monitoring.py  noise_audit.py  reconciliation.py  research_signals.py  specialization.py
notifications/: alerts.py  emailer.py
risk/: correlation.py  earnings_calendar.py  exit_optimiser.py  macro_calendar.py  position_sizer.py  regime_policy.py  risk_config.py  risk_manager.py
scripts/: author_candidates.py  backfill_outcomes.py  catalyst_backtest.py  close_all_shorts.py  collect_short_misses.py  com.investorbot.scheduler.plist  eval_shadow_catalyst_shorts.py  existing_signal_isolation.py  falling_knife_short.py  feed_health_check.py  gap_down_reclaim_backtest.py  gdelt_tone_probe.py  insider_backtest.py  lazy_prices_backtest.py  lottery_pop_short_backtest.py  macro_gate_report.py  mine_candidates.py  n1_sector_residual.py  n1_short_flow_conditioner.py  obv_elimination_test.py  offering_backtest.py  options_iv_backtest.py  overnight_accumulation_backtest.py  pead_conditioning_backtest.py  pead_pullback_backtest.py  peer_lead_lag.py  phase0_noise_audit.example.json  phase0_noise_audit.py  phase0_power_analysis.py  pipeline_status.py  quiet_volume_backtest.py  reconcile_replay.py  residual_reversal_backtest.py  residual_reversal_threshold.py  residual_trend_pullback.py  reversal_enhance.py  reversal_regime_reconcile.py  reversal_vix_gate.py  run_diagnostics.py  run_full_backtest_suite.sh  (+10 more)
signals/: evaluator.py  registry.py  snapshot.py
tests/: test_adversarial_llm.py  test_ai_analyst.py  test_alerts.py  test_alpaca_session.py  test_analyst_revisions.py  test_as_of.py  test_audit_log.py  test_authoring.py  test_av_sentiment.py  test_backtest.py  test_borrow_cost.py  test_breadth.py  test_candidate_miner.py  test_candidate_registry.py  test_case_memory.py  test_cli.py  test_config.py  test_context_card.py  test_correlation.py  test_counterfactual.py  test_dashboard.py  test_db.py  test_decision_log.py  test_deps.py  test_dof_ledger.py  test_earnings_calendar.py  test_earnings_surprise.py  test_edgar_client.py  test_edgar_event_history.py  test_emailer.py  test_evaluator_gates.py  test_exit_optimiser.py  test_experiment_arms.py  test_experiment_backfill.py  test_experiment_collection.py  test_experiment_context_ledger.py  test_experiment_dataset.py  test_experiment_evidence_score.py  test_experiment_feed_health.py  test_experiment_material_context.py  (+71 more)
utils/: alpaca_session.py  audit_log.py  db.py  decision_log.py  feed_status.py  health.py  order_ledger.py  portfolio_tracker.py  retry.py  symbols.py  validators.py
