[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "investorbot"
version = "0.1.0"
requires-python = ">=3.12"

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (unused imports, undefined names)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter
    "B008",  # function calls in default args
    "SIM108", # ternary vs if-else — readability preference
]

[tool.ruff.lint.isort]
known-first-party = [
    "analysis", "backtest", "config", "data",
    "execution", "notifications", "risk", "utils",
]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
# analysis/ excluded until Anthropic SDK overload stubs settle.
files = [
    "models.py",
    "config.py",
    "utils/validators.py",
    "risk/position_sizer.py",
    "execution/trader.py",
]

[[tool.mypy.overrides]]
# Alpaca SDK stubs return union types (Order | dict, Position | str, etc.)
# that mypy cannot resolve. Suppress SDK-generated codes; our own typed code
# (OrderResult, dataclasses) is still checked.
module = "execution.trader"
disable_error_code = ["union-attr", "arg-type", "index", "operator"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
log_cli = false

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "backtest/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
