[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "investorbot"
version = "0.1.0"
requires-python = ">=3.12"

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (unused imports, undefined names)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter
    "B008",  # function calls in default args
    "SIM108", # ternary vs if-else — readability preference
]

[tool.ruff.lint.isort]
known-first-party = [
    "analysis", "backtest", "config", "core", "data", "execution",
    "experiment", "notifications", "pipeline", "risk", "utils",
]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
# The data layer leans on untyped third-party libs (requests, yfinance, pytrends, fredapi,
# scipy, etc.). ignore_missing_imports handles not-found; disabling import-untyped handles
# installed-but-unstubbed packages (e.g. requests) so we don't scatter fragile per-import
# ignores that mypy then flags as unused depending on file processing order.
disable_error_code = ["import-untyped"]
# Modules type-checked in CI. The data/ + execution/short_universe + signals modules below were
# brought to a clean mypy state in v1.100; analysis/ stays excluded until the Anthropic SDK
# overload stubs settle.
files = [
    "models.py",
    "config.py",
    "utils/validators.py",
    "utils/symbols.py",
    "risk/position_sizer.py",
    "risk/exit_optimiser.py",
    "execution/trader.py",
    "execution/short_universe.py",
    "data/borrow_cost.py",
    "data/fundamental_cache.py",
    "data/fundamentals.py",
    "data/index_membership.py",
    "data/edgar_event_history.py",
    "signals/evaluator.py",
    "experiment/monitoring.py",
    "experiment/arms.py",
    "experiment/noise_audit.py",
    "experiment/material_context.py",
    "experiment/context_ledger.py",
    "experiment/evidence_score.py",
    "experiment/dataset.py",
    "experiment/feed_health.py",
    "experiment/collection.py",
    "experiment/backfill.py",
]

[[tool.mypy.overrides]]
# Alpaca SDK stubs return union types (Order | dict, Position | str, etc.)
# that mypy cannot resolve. Suppress SDK-generated codes; our own typed code
# (OrderResult, dataclasses) is still checked.
module = "execution.trader"
disable_error_code = ["union-attr", "arg-type", "index", "operator", "misc"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --cov --cov-report=term-missing"
log_cli = false
filterwarnings = [
    # alpaca-py's streaming module imports websockets.legacy at import time;
    # we do not use streaming, and the warning is from the vendor library.
    "ignore::DeprecationWarning:websockets",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    ".venv/*",
    "*/.venv/*",
    "evals/*",
    "*/evals/*",
    "*/vscode*",
    "*/.vscode/*",
    "*/vscode_pytest*",
    "*/extensions/*",
    "*/site-packages/*",
    "*/python_files/*",
    "*ms-python*",
    "scripts/phase0_noise_audit.py",
    "*/scripts/phase0_noise_audit.py",
    "scripts/feed_health_check.py",
    "*/scripts/feed_health_check.py",
    "scripts/universe_edge_check.py",
    "*/scripts/universe_edge_check.py",
    "scripts/backfill_outcomes.py",
    "*/scripts/backfill_outcomes.py",
    "scripts/short_disabled_backtest.py",
    "*/scripts/short_disabled_backtest.py",
    "scripts/collect_short_misses.py",
    "*/scripts/collect_short_misses.py",
    "scripts/eval_shadow_catalyst_shorts.py",
    "*/scripts/eval_shadow_catalyst_shorts.py",
    "scripts/signal_direction_matrix.py",
    "*/scripts/signal_direction_matrix.py",
    "scripts/lazy_prices_backtest.py",
    "*/scripts/lazy_prices_backtest.py",
    "scripts/pead_conditioning_backtest.py",
    "*/scripts/pead_conditioning_backtest.py",
    "scripts/residual_reversal_backtest.py",
    "*/scripts/residual_reversal_backtest.py",
    "scripts/quiet_volume_backtest.py",
    "*/scripts/quiet_volume_backtest.py",
    "scripts/overnight_accumulation_backtest.py",
    "*/scripts/overnight_accumulation_backtest.py",
    "scripts/gap_down_reclaim_backtest.py",
    "*/scripts/gap_down_reclaim_backtest.py",
    "scripts/signal_ablation.py",
    "*/scripts/signal_ablation.py",
    "scripts/pead_pullback_backtest.py",
    "*/scripts/pead_pullback_backtest.py",
    "scripts/existing_signal_isolation.py",
    "*/scripts/existing_signal_isolation.py",
    "scripts/residual_reversal_threshold.py",
    "*/scripts/residual_reversal_threshold.py",
    "scripts/sleeve_backtest.py",
    "*/scripts/sleeve_backtest.py",
    "scripts/offering_backtest.py",
    "*/scripts/offering_backtest.py",
]

[tool.coverage.report]
include = ["*/InvestorBotHard/*"]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
